# autosar-she

./: .coverage  README.md  pyproject.toml  test.ps1
.github/workflows/: main.yml  pylint.yml
autosar_she/: protocol.py  types.py
debug/: upd_mem.py
src/autosar_she/: __init__.py  algo.py  protocol.py  types.py
test/: she.py  test.py  test_algo.py  test_update_mem.py
