[project]
name = "autosar-she"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Nguyen Khac Duy (MS/ETA-Hub-JP)", email = "Duy.NguyenKhac2@vn.bosch.com" },
]
dependencies = ["bitarray>=3.4.0", "cryptography>=44.0.3"]

[tool.uv]
package = true

[dependency-groups]
dev = ["mypy>=1.15.0", "pylint>=3.3.7", "pytest-cov>=6.1.1", "ruff>=0.11.10"]
