[project]
name = "autosar-she"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nguyen Khac Duy", email = "nkduy@duck.com" },
]
dependencies = ["bitarray>=3.7.0", "cryptography>=44.0.3"]

[tool.uv]
package = true

[dependency-groups]
dev = ["mypy>=1.15.0", "pylint>=3.3.7", "pytest-cov>=6.1.1", "ruff>=0.11.10"]
