[project]
name = "autosar-she"
version = "1.0.4"
description = "Implementation of AUTOSAR-SHE MemoryUpdate protocol in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nguyen Khac Duy", email = "nkduy@duck.com" }]
dependencies = ["bitarray>=3.7.2", "cryptography>=46.0.2"]

[tool.uv]
package = true

[dependency-groups]
dev = ["mypy>=1.18.2", "pylint>=4.0.1", "pytest-cov>=7.0.0", "ruff>=0.14.0"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=autosar_she --cov-fail-under=90 --cov-report=html -v -s"
